codepkg/objects/ALS_Cal_OES_FIPS__mdt.object
<CustomObject>
    <fields>
        <fullName>Entity_Name__c</fullName>
        <label>Entity Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Id__c</fullName>
        <label>Id</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <label>ALS_Cal OES FIPS</label>
    <pluralLabel>ALS_Cal OES FIPS</pluralLabel>
</CustomObject>